# packer-windows

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  Vagrantfile.test  build.sh  release.sh  upload.sh  vagrantfile-windows_10-x64.template  vagrantfile-windows_10-x86.template  vagrantfile-windows_10.template  vagrantfile-windows_7_x64.template  vagrantfile-windows_7_x86.template  vagrantfile-windows_8_x64.template  windows_10.json  windows_10_base.json  windows_10_universal.json  windows_10_x64.json  windows_10_x64_1909_base.json  windows_10_x64_1909_universal.json  windows_10_x64_LTSC_base.json  windows_10_x64_LTSC_universal.json  windows_10_x64_apps.json  windows_10_x86.json  windows_10_x86_1909_base.json  windows_10_x86_1909_universal.json  windows_10_x86_LTSC_base.json  windows_10_x86_LTSC_universal.json  windows_10_x86_apps.json  windows_7_x64.json  windows_7_x64_apps.json  windows_7_x86.json  windows_7_x86_apps.json  windows_81_x64.json  windows_81_x64_apps.json  windows_81_x86.json  windows_81_x86_apps.json  windows_8_x64.json  windows_8_x64_apps.json  windows_8_x86.json  (+1 more)
doit/: do.bat  do.ps1  doit-secret  doit-server.bat  doitrc  mount-drive.bat
doit/server/: .gitignore  LICENCE  Makefile.am  Makefile.vc  README  configure.ac  doit.c  doit.h  doit.rc  doitclient.c  doitdoc.txt  doitlib.c  doitprot.txt  listener.c  mkauto.sh
scripts/: activate-w7.bat  bootstrap.ps1  chocolatey-packages.bat  chocolatey.bat  clean-w7.ps1  clean-w8.bat  clean-w81.bat  clean.bat  clean.ps1  compact.bat  compact_x86.bat  disable-windows-defender.ps1  doit.bat  doit_x64.bat  (+15 more)
(+23 files in other folders)
